--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <title>menu design - educurve company</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
-   
-</head>
-  <body>
+   </head>
+ <body>
     <div class="menu-bar">
-<ul>
-<li class = "active"> <a href ="#"><i class="fa fa-home"></i>Home</a>
-</li>
-<li> <a href ="#"><i class ="fa fa-user"></i>About Us</a>
+    <ul>
+      <li class = "active"> 
+        <a href ="#"><i class="fa fa-home"></i>Home</a> </li>
+      <li>
+         <a href ="#"><i class ="fa fa-user"></i>About Us</a>
      <div class ="sub-menu-1">
-      <ul>
+     <ul>
 <li><a href="#">Mission</a></li>
 <li><a href="#">Vision</a></li>
 <li><a href="#">Team</a></li>
