--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> HTML_CSS_JS BASES QUIZ Web site </title>
-	<link rel=
-	</head>
+	<link rel="stylesheet" href="styles.css">
+</head>
 <body>
 	<!------------- Header section --------------------->
 	<!-------   Website Title ------>
